--- a/index.html
+++ b/index.html
@@ -1,54 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Shower Presentation Engine</title>
+    <title>Rendering pipeline and web animations performance</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="theme/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <link rel="stylesheet" href="node_modules/@shower/ribbon/styles/styles.css">
+    <link rel="stylesheet" href="theme/corecamp.css">
     <style>
         .shower {
             --slide-ratio: calc(16 / 9);
         }
     </style>
 </head>
-<body class="shower list">
+<body class="shower full">
 
     <header class="caption">
-        <h1>Shower Presentation Engine</h1>
-        <p>Yours Truly, Famous Inc.</p>
+        <h1>Rendering pipeline and web animations performance</h1>
     </header>
 
-    <section class="slide" id="cover">
-        <h2>Shower Presentation Engine</h2>
-        <p>Brought to you by <a href="http://pepelsbey.net">Vadim Makeev</a></p>
-        <figure>
-            <img class="cover" src="pictures/cover.jpg" alt="Hands on the orange typewriter in a park">
-            <figcaption class="copyright right white">
-                <a href="http://fiftyfootshadows.net/">© John Carey</a>
-            </figcaption>
-        </figure>
+    <section class="slide black no-number" id="cover">
+        <img class="logo" width="240" height="135" src="theme/images/corecamp_logo.png" alt="CoreCamp logo"/>
+
+        <h2>Rendering pipeline and web animations performance</h2>
+        <p>by Pavlo Navalnyi</p>
+
+        <img class="cover width" src="theme/images/corecamp_pattern.png" alt=""/>
         <style>
+            #cover .logo {
+                margin: 100px 0 0 calc(50% - 120px);
+            }
+
             #cover h2 {
                 margin: 30px 0 0;
                 color: white;
                 text-align: center;
-                font-size: 70px;
+                font-size: 60px;
+                font-weight: bold;
             }
 
             #cover p {
-                margin: 10px 0 0;
+                margin: 20px 0 0;
                 text-align: center;
                 color: white;
-                font-style: italic;
-                font-size: 20px;
-            }
-
-            #cover p a {
-                color: white;
+                font-size: 30px;
             }
         </style>
     </section>
 
+    <section class="slide no-number">
+        <div class="loader"></div>
+
+        <style>
+            .loader,
+            .loader:after {
+                border-radius: 50%;
+                width: 10em;
+                height: 10em;
+            }
+            .loader {
+                margin: 220px auto 0;
+                font-size: 10px;
+                border-top: 1.1em solid rgba(14,25,62, 0.2);
+                border-right: 1.1em solid rgba(14,25,62, 0.2);
+                border-bottom: 1.1em solid rgba(14,25,62, 0.2);
+                border-left: 1.1em solid #0E193E;
+                animation: loading 1.1s infinite linear;
+            }
+            @keyframes loading {
+                0% {
+                    -webkit-transform: rotate(0deg);
+                    transform: rotate(0deg);
+                }
+                100% {
+                    -webkit-transform: rotate(360deg);
+                    transform: rotate(360deg);
+                }
+            }
+        </style>
+
+    </section>
+
+    <section class="slide no-number">
+        <h2 class="shout grow">I hate spinners</h2>
+    </section>
+
+    <section class="slide">
+        <img class="cover " src="pictures/performance-tab1.png" alt="Performance tab screenshot">
+    </section>
+
+    <section class="slide">
+        <h2 class="shout">Rendering pipeline</h2>
+    </section>
+
+    <section class="slide">
+        <h2>Rendering pipeline</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At consectetur, deleniti eaque error esse excepturi expedita magni molestias, non nulla odio omnis quasi quidem quis quisquam quo repellat, voluptates voluptatibus!</p>
+    </section>
+
+    <!--<section class="slide no-number">-->
+        <!--<iframe class="cover" src="https://www.tomswholesomefood.com.au/" frameborder="0" width="100%" height="100%"></iframe>-->
+    <!--</section>-->
+    
     <section class="slide">
         <h2>Shower key features</h2>
         <ol>
@@ -196,10 +249,6 @@
             }
         </style>
     </section>
-
-    <footer class="badge">
-        <a href="https://github.com/shower/shower">Fork me on GitHub</a>
-    </footer>
 
     <div class="progress"></div>
 
