--- a/index.html
+++ b/index.html
@@ -625,23 +625,22 @@
         </iframe>
     </section>
 
-
-    <section class="slide no-number">
-        <iframe class="cover" src="http://across.global/" frameborder="0" width="100%" height="100%"></iframe>
+    <section class="slide">
+        <h2 class="shout">Bad spinner example 1</h2>
     </section>
 
-    <section class="slide no-number">
-        <iframe class="cover" src="https://www.tomswholesomefood.com.au/" frameborder="0" width="100%" height="100%"></iframe>
+    <section class="slide">
+        <h2 class="shout">Bad spinner example 2</h2>
     </section>
 
-    <section class="slide no-number">
-        <iframe class="cover" src="http://boroda-digital.orwo.ru/" frameborder="0" width="100%" height="100%"></iframe>
+    <section class="slide">
+        <h2 class="shout">Bad spinner example 3</h2>
     </section>
 
     <section class="slide">
         <h2>Spinners</h2>
         <ul style="font-size: 35px;">
-            <li>Don't use it if you <strong>really</strong> need to</li>
+            <li>Don't use it if you don't <strong>really</strong> need to</li>
             <li class="next">Make it entertaining</li>
             <li class="next">Remember <code>async</code></li>
         </ul>
