--- a/index.html
+++ b/index.html
@@ -48,20 +48,14 @@
         <h1>Rendering pipeline and web animations performance</h1>
     </header>
 
-    <section class="slide black no-number" id="cover">
-        <img class="logo" width="240" height="135" src="theme/images/corecamp_logo.png" alt="CoreCamp logo"/>
-
+    <section class="slide black no-number no-logo" id="cover">
         <h2>Rendering pipeline and web animations performance</h2>
         <p>by Pavlo Navalnyi</p>
 
         <img class="cover width" src="theme/images/corecamp_pattern.png" alt=""/>
         <style>
-            #cover .logo {
-                margin: 100px 0 0 calc(50% - 120px);
-            }
-
             #cover h2 {
-                margin: 30px 0 0;
+                margin: 200px 0 0;
                 color: white;
                 text-align: center;
                 font-size: 60px;
