--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="theme/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <link rel="stylesheet" href="node_modules/@shower/ribbon/styles/styles.css">
     <link rel="stylesheet" href="theme/corecamp.css">
+    <link rel="stylesheet" href="theme/cat.css">
     <style>
         .shower {
             --slide-ratio: calc(16 / 10);
@@ -71,39 +72,39 @@
         </style>
     </section>
 
-    <section class="slide no-number">
-        <div class="spinner"></div>
-
-        <style>
-            .spinner,
-            .spinner:after {
-                border-radius: 50%;
-                width: 10em;
-                height: 10em;
-            }
-            .spinner {
-                margin: 220px auto 0;
-                font-size: 10px;
-                border-top: 1.1em solid rgba(14,25,62, 0.2);
-                border-right: 1.1em solid rgba(14,25,62, 0.2);
-                border-bottom: 1.1em solid rgba(14,25,62, 0.2);
-                border-left: 1.1em solid #0E193E;
-                animation: spinning 1.1s infinite linear;
-            }
-            @keyframes spinning {
-                0% {
-                    transform: rotate(0deg);
-                }
-                100% {
-                    transform: rotate(360deg);
-                }
-            }
-        </style>
-
-    </section>
-
-    <section class="slide no-number">
-        <h2 class="shout grow">I hate spinners</h2>
+    <section class="slide black no-number no-logo">
+        <div class="cat">
+            <div class="cat__segment"></div>
+            <div class="cat__segment"></div>
+            <div class="cat__segment"></div>
+            <div class="cat__segment"></div>
+            <div class="cat__segment"></div>
+            <div class="cat__segment"></div>
+            <div class="cat__segment"></div>
+            <div class="cat__segment"></div>
+            <div class="cat__segment"></div>
+            <div class="cat__segment"></div>
+            <div class="cat__segment"></div>
+            <div class="cat__segment"></div>
+            <div class="cat__segment"></div>
+            <div class="cat__segment"></div>
+            <div class="cat__segment"></div>
+            <div class="cat__segment"></div>
+            <div class="cat__segment"></div>
+            <div class="cat__segment"></div>
+            <div class="cat__segment"></div>
+            <div class="cat__segment"></div>
+            <div class="cat__segment"></div>
+            <div class="cat__segment"></div>
+            <div class="cat__segment"></div>
+            <div class="cat__segment"></div>
+            <div class="cat__segment"></div>
+            <div class="cat__segment"></div>
+            <div class="cat__segment"></div>
+            <div class="cat__segment"></div>
+            <div class="cat__segment"></div>
+            <div class="cat__segment"></div>
+        </div>
     </section>
 
     <section class="slide no-number">
@@ -232,7 +233,7 @@
                     <li class="next">All size related DOM changes</li>
                     <li class="next">All size related DOM queries</li>
                     <li class="next"><mark>element.style.width</mark> = x</li>
-                    <li class="next">let w = <mark>element.style.width</mark></li>
+                    <li class="next">let w = <mark>element.offsetHeight</mark> or <mark>getComputedStyle()</mark></li>
                 </ul>
             </div>
         </div>
